# internal/api/role-leader.pb.gw.go
@@ -145,7 +145,7 @@ func RegisterRoleLeaderHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/CreateFeedback", runtime.WithHTTPPathPattern("/api/role-leader"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/CreateFeedback", runtime.WithHTTPPathPattern("/api/create-feedback"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -165,7 +165,7 @@ func RegisterRoleLeaderHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/GetCall", runtime.WithHTTPPathPattern("/api/role-leader/{call_id}"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/GetCall", runtime.WithHTTPPathPattern("/api/get-call/{call_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -185,7 +185,7 @@ func RegisterRoleLeaderHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/GetLeaderCalls", runtime.WithHTTPPathPattern("/api/role-leader/{leader_id}"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.RoleLeader/GetLeaderCalls", runtime.WithHTTPPathPattern("/api/leaders-calls/{leader_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -243,7 +243,7 @@ func RegisterRoleLeaderHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/CreateFeedback", runtime.WithHTTPPathPattern("/api/role-leader"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/CreateFeedback", runtime.WithHTTPPathPattern("/api/create-feedback"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -260,7 +260,7 @@ func RegisterRoleLeaderHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/GetCall", runtime.WithHTTPPathPattern("/api/role-leader/{call_id}"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/GetCall", runtime.WithHTTPPathPattern("/api/get-call/{call_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -277,7 +277,7 @@ func RegisterRoleLeaderHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/GetLeaderCalls", runtime.WithHTTPPathPattern("/api/role-leader/{leader_id}"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.RoleLeader/GetLeaderCalls", runtime.WithHTTPPathPattern("/api/leaders-calls/{leader_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -294,9 +294,9 @@ func RegisterRoleLeaderHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 }
 
 var (
-	pattern_RoleLeader_CreateFeedback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "role-leader"}, ""))
-	pattern_RoleLeader_GetCall_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "role-leader", "call_id"}, ""))
-	pattern_RoleLeader_GetLeaderCalls_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "role-leader", "leader_id"}, ""))
+	pattern_RoleLeader_CreateFeedback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "create-feedback"}, ""))
+	pattern_RoleLeader_GetCall_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "get-call", "call_id"}, ""))
+	pattern_RoleLeader_GetLeaderCalls_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"api", "leaders-calls", "leader_id"}, ""))
 )
 
 var (
